Fixing team members per view

--- a/sections/contact-form-section.liquid
+++ b/sections/contact-form-section.liquid
@@ -69,7 +69,7 @@
           {% if settings.footer_email != blank %}
             <p>{{ settings.footer_email }}</p>
           {% else %}
-            <p>info@voyagebyhype.com</p>
+            <p>{{shop.email}}</p>
           {% endif %}
           <p class="text-muted">We'll respond within 24 hours</p>
         </div>
