Adding CSS to text in two column section

--- a/sections/two-columns.liquid
+++ b/sections/two-columns.liquid
@@ -875,5 +875,14 @@
       max-width: 100% !important;
     }
   }
+  
+  /* Text, Heading, and Subheading styling */
+  #shopify-section-{{ section.id }} .two-column-heading,
+  #shopify-section-{{ section.id }} .two-column-subheading,
+  #shopify-section-{{ section.id }} .two-column-body,
+  #shopify-section-{{ section.id }} .two-column-body p {
+    font-size: 20px !important;
+    line-height: 3rem !important;
+  }
 </style>
 
